added pom.xml to backend folder